[metadata]
name = fastlapmap
version = 0.1.2
author = Davi Sidarta-Oliveira
author_email = davisidarta@fcm.unicamp.br
description = Fast Laplacian Eigenmaps for dimensionality reduction.
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://github.com/davisidarta/fastlapmap
license = MIT
project_urls =
    Bug Tracker = https://github.com/davisidarta/fastlapmap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6
